Tech Stack: Up to and including Reasoning.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Struct",
         "detekt",
         "micros_ervice",
-        "stylelint"
+        "stylelint",
+        "templating"
     ]
 }
