✓ Write descriptive alt-text ✓ Update link text to be read independantly.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,21 @@
         "Mockito",
         "Postgres",
         "Quarkus",
+        "Qvarford",
+        "SNES",
+        "Skövde",
         "Struct",
+        "Ukontrøll",
+        "Waluigi's",
+        "ZSNES",
+        "cutscenes",
         "detekt",
+        "kaizo",
         "micros_ervice",
         "playthrough",
         "stylelint",
         "templating",
+        "waluigis",
         "youtuber"
     ]
 }
