✓ Write post about Case Based Reasoning.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Jacoco",
         "Klint",
         "Mockito",
+        "PLINQ",
         "Postgres",
         "Quarkus",
         "Qvarford",
