✓ Fix outline according to HTML outliner.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Postgres",
         "Quarkus",
         "Qvarford",
+        "Qvarford's",
         "SNES",
         "Skövde",
         "Struct",
