--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,4 @@ exclude:
    - Gemfile
    - Gemfile.lock
 #   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+   - vendor/
