✓ Write post about Tiny Tricky Tiles.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "Deedly",
         "FMOD",
+        "Granström",
         "Jacoco",
+        "Karlsson",
         "Klint",
         "Mockito",
         "PLINQ",
@@ -13,6 +15,7 @@
         "SNES",
         "Skövde",
         "Struct",
+        "Trashmania",
         "Ukontrøll",
         "Waluigi's",
         "ZSNES",
