✓ Write post about Financial Administration Module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Bricknode",
         "Deedly",
         "FMOD",
         "Granström",
@@ -19,6 +20,7 @@
         "Ukontrøll",
         "Waluigi's",
         "ZSNES",
+        "aspnet",
         "cutscenes",
         "detekt",
         "kaizo",
