✓ Nav-bar next to content on wide screens

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "detekt",
         "kaizo",
         "micros_ervice",
+        "nocontent",
         "playthrough",
         "stylelint",
         "templating",
