✓ Write post about Solutions System.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
         "Quarkus",
         "Qvarford",
         "Qvarford's",
+        "Ratsit",
         "SNES",
+        "Serv",
         "Skövde",
         "Struct",
         "Trashmania",
@@ -25,7 +27,9 @@
         "detekt",
         "kaizo",
         "micros_ervice",
+        "msbuild",
         "nocontent",
+        "nuget",
         "playthrough",
         "stylelint",
         "templating",
