--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,42 @@
 {
     "cSpell.words": [
+        "aspnet",
         "Bricknode",
+        "cutscenes",
         "Deedly",
+        "detekt",
         "FMOD",
         "Granström",
         "Jacoco",
+        "kaizo",
         "Karlsson",
         "Klint",
+        "micros_ervice",
+        "Microservices",
         "Mockito",
+        "msbuild",
+        "nocontent",
+        "nuget",
+        "OOPSLA",
+        "playthrough",
         "PLINQ",
         "Postgres",
         "Quarkus",
         "Qvarford",
         "Qvarford's",
         "Ratsit",
-        "SNES",
+        "Schmitz",
         "Serv",
         "Skövde",
+        "SNES",
         "Struct",
+        "stylelint",
+        "templating",
         "Trashmania",
         "Ukontrøll",
         "Waluigi's",
-        "ZSNES",
-        "aspnet",
-        "cutscenes",
-        "detekt",
-        "kaizo",
-        "micros_ervice",
-        "msbuild",
-        "nocontent",
-        "nuget",
-        "playthrough",
-        "stylelint",
-        "templating",
         "waluigis",
-        "youtuber"
+        "youtuber",
+        "ZSNES"
     ]
 }
