Remove redundant title text in blog post list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "nocontent",
         "nuget",
         "OOPSLA",
+        "outliner",
         "playthrough",
         "PLINQ",
         "Postgres",
