Generate home page with next.js - not used yet.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "templating",
         "Trashmania",
         "Ukontrøll",
+        "unoptimized",
         "Waluigi's",
         "waluigis",
         "youtuber",
