--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,33 @@
 {
     "cSpell.words": [
+        "apos",
+        "aren",
         "aspnet",
         "Bricknode",
+        "composability",
         "cutscenes",
         "Deedly",
+        "Democreativity",
         "detekt",
+        "didn",
+        "doesn",
         "FMOD",
+        "frontends",
         "Granström",
         "Jacoco",
+        "JDBI",
         "kaizo",
         "Karlsson",
+        "Kinect",
         "Klint",
+        "Liquibase",
         "micros_ervice",
         "Microservices",
         "Mockito",
         "msbuild",
         "nocontent",
         "nuget",
+        "Nuxt",
         "OOPSLA",
         "outliner",
         "playthrough",
