--- a/johannes-qvarford.github.io/package.json
+++ b/johannes-qvarford.github.io/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo TODO, add some test thing."
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
