--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "jsdom": "^19.0.0",
     "parcel": "^2.3.2",
     "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "date-fns": "^2.28.0"
   }
 }
