--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node tools/validate-outlines.js",
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate-outlines": "node tools/generate-outlines.js"
@@ -23,19 +23,19 @@
   "homepage": "https://github.com/johannes-qvarford/johannes-qvarford.github.io#readme",
   "devDependencies": {
     "dir-compare": "^4.0.0",
+    "eslint": "8.10.0",
+    "eslint-config-next": "^13.5.4",
     "h5o": "^0.11.3",
     "html-validator": "^6.0.0",
     "jsdom": "^19.0.0",
-    "parcel": "^2.8.3",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "minimist": "1.2.6"
+    "minimist": "1.2.6",
+    "parcel": "^2.8.3"
   },
   "dependencies": {
     "date-fns": "^2.28.0",
-    "rimraf": "^3.0.2",
-    "next": "13.5.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^3.0.2"
   }
 }
